# gurume

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IDEAS.md  MEMORY.md  Makefile  README.md  TUI_USAGE.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  verification_results.json
.codex/: config.toml
.github/workflows/: docker.yml  docs.yml  python.yml  release.yml
docs/: BACKLOG.md  LOG.md  MEMORY.md  TUI_USAGE.md
docs/plans/: 2026-05-12_fix-cuisine-filter-plan.md  2026-05-12_mcp-http-transport-plan.md  2026-05-12_mkdocs-site-plan.md  2026-05-12_pr40-followup-plan.md  2026-05-12_remove-openai-api-key-plan.md  2026-05-14_cli-search-accuracy-plan.md  2026-05-14_gurume-search-bugs-plan.md  2026-05-14_mcp-detail-menu-course-plan.md  2026-05-14_mcp-keyword-filter-plan.md  2026-05-14_mcp-search-meta-plan.md
docs/plans/archived/: 2026-05-12_fix-cuisine-filter-plan.md  2026-05-12_mcp-http-transport-plan.md  2026-05-12_remove-openai-api-key-plan.md  2026-05-14_cli-search-accuracy-plan.md  2026-05-14_mcp-detail-menu-course-plan.md  2026-05-14_mcp-keyword-filter-plan.md  2026-05-14_mcp-search-meta-plan.md
docs/site/: index.md
docs/site/reference/: detail.md  exceptions.md  index.md  restaurant.md  search.md  server.md  suggest.md  types.md
docs/site/usage/: tui.md
examples/: basic_search.py  cli_example.py  restaurant_detail.py
reference/: index.html
reference/detail/: index.html
reference/exceptions/: index.html
reference/restaurant/: index.html
reference/search/: index.html
reference/server/: index.html
reference/suggest/: index.html
reference/types/: index.html
scripts/: verify_js_rendering.py
search/: search_index.json
skills/gurume-cli/: SKILL.md
src/gurume/: __init__.py  area_mapping.py  cache.py  cli.py  detail.py  exceptions.py  genre_mapping.py  restaurant.py  retry.py  search.py  server.py  server_helpers.py  server_models.py  suggest.py  tui.py  types.py
src/tabelog/: __init__.py  area_mapping.py  cli.py  restaurant.py  search.py  suggest.py  tui.py
src/tabelogmcp/: restaurant.py
tests/: README.md  conftest.py  test_area_mapping.py  test_cache.py  test_cli.py  test_detail.py  test_genre_mapping.py  test_integration.py  test_models.py  test_restaurant.py  test_retry.py  test_search.py  test_server.py  test_suggest.py
tests/integration/: test_cuisine_filter.py
usage/tui/: index.html
