[project]
name            = "gurume"
version         = "0.0.5"
description     = "Python library, CLI, TUI, and MCP server for discovering Japanese restaurants on Tabelog"
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
keywords        = [
  "tabelog",
  "restaurant",
  "japan",
  "food",
  "scraping",
  "mcp",
  "cli",
  "tui",
  "search",
]
classifiers     = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies    = [
  "beautifulsoup4>=4.14.3",
  "loguru>=0.7.3",
  "lxml>=6.1.0",
  "mcp[cli]>=1.27.0",
  "openai>=2.32.0",
  "pydantic>=2.13.2",
  "tenacity>=9.1.4",
  "textual>=8.2.4",
  "typer>=0.24.1",
]

[project.scripts]
gurume = "gurume.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.11",
  "ty>=0.0.31",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.0.5"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # "ANN",     # flake8-annotations
  "ASYNC",   # flake8-async
  "B",       # flake8-bugbear
  # "BLE",     # flake8-blind-except
  "C",       # flake8-comprehensions
  "DTZ",     # flake8-datetimez
  "E",       # pycodestyle errors
  "F",       # pyflakes
  "FURB",    # refurb
  "I",       # isort
  "G",       # flake8-logging-format
  "N",       # pep8-naming
  "PERF",    # perflint
  "PIE",     # flake8-pie
  "PTH",     # flake8-use-pathlib
  "RET",     # flake8-return
  "RSE",     # flake8-raise
  # "RUF",     # ruff-specific rules
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "TRY002",  # raise-vanilla-class
  "TRY004",  # type-check-without-type-error
  "TRY203",  # useless-try-except
  "TRY300",  # try-consider-else
  "UP",      # pyupgrade
  "W",       # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
